--- a/src/_includes/layouts/blog.njk
+++ b/src/_includes/layouts/blog.njk
@@ -22,8 +22,9 @@ layout: 'layouts/base.njk'
         xmlns:cc='http://creativecommons.org/ns#'
         xmlns:dct='http://purl.org/dc/terms/'>
         <span property='dct:title' class='mr-1'>
-            This post of
-            <code>ref_cycle</code>&nbsp;
+            This post of the
+            <code>ref_cycling</code>
+            blog&nbsp;
         </span>
         is licensed under
         <a
