--- a/src/index.njk
+++ b/src/index.njk
@@ -1,8 +1,6 @@
 ---
+title: Home
 layout: layouts/base.njk
-eleventyNavigation:
-    key: Alex's Website
-    url: https://faceftw.dev
 ---
 
 <main class="container mx-auto flex flex-col md:w-[80%]">
