--- a/src/about.njk
+++ b/src/about.njk
@@ -1,10 +1,6 @@
 ---
+title: About Alex
 layout: layouts/base.njk
-eleventyNavigation:
-    key: About
-    url: /about
-
-
 ---
 
 <h1 class='m-4 text-4xl'>Hi! My name is Alex</h1>
