--- a/src/blog.njk
+++ b/src/blog.njk
@@ -1,18 +1,21 @@
 ---
+title: Blog
 layout: 'layouts/base.njk'
 ---
 
 <div class="container mx-auto px-5">
     <h1 class="mt-4 text-4xl">
-        <pre>ref_cycle</pre>
+        <code>ref_cycling - the blog</code>
     </h1>
     <h2 class="mt-2 mb-4 text-2xl text-neutral-600 dark:text-neutral-400">AKA: Core Dumping my Brain on the Internet</h2>
     <p
         class="prose prose-green dark:prose-invert inline-flex lg:flex"
         xmlns:cc="http://creativecommons.org/ns#"
         xmlns:dct="http://purl.org/dc/terms/">
-        <span property="dct:title" class="mr-1">ref_cycle&nbsp;</span>
-        is licensed under&nbsp;
+        <span property="dct:title" class="mr-1">
+            The
+            <code>ref_cycling</code>
+            blog</span>is licensed under
         <a
             href="https://creativecommons.org/licenses/by-nc-sa/4.0"
             target="_blank"
