--- a/src/_includes/layouts/blog.njk
+++ b/src/_includes/layouts/blog.njk
@@ -6,8 +6,7 @@ layout: 'layouts/base.njk'
     <div class='mb-4 flex flex-row'>
         <a href='/blog'>
             <div class='flex flex-row space-x-2'>
-                {% include 'icons/arrow_left.njk' %}
-                <p class='text-neutral-600 dark:text-neutral-500'>Back to the Main Page</p>
+                {% include 'icons/arrow_left.njk' %}<p class='text-neutral-600 dark:text-neutral-500'>Back to the Main Page</p>
             </div>
         </a>
     </div>
@@ -21,11 +20,7 @@ layout: 'layouts/base.njk'
         class='prose prose-green dark:prose-invert mb-8 inline-flex self-center lg:flex'
         xmlns:cc='http://creativecommons.org/ns#'
         xmlns:dct='http://purl.org/dc/terms/'>
-        <span property='dct:title' class='mr-1'>
-            This post of the
-            <code>ref_cycling</code>
-            blog&nbsp;
-        </span>
+        <span property='dct:title' class='mr-1'>This post of the&nbsp;<code>ref_cycling</code>&nbsp;blog</span>
         is licensed under
         <a
             href='https://creativecommons.org/licenses/by-nc-sa/4.0'
