--- a/src/resume.njk
+++ b/src/resume.njk
@@ -2,68 +2,60 @@
 title: Alex Westerman's Resume
 layout: 'layouts/base.njk'
 ---
-
-
 {% set badge_style = "inline-flex items-center justify-center font-medium rounded-md border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 gap-1 focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] transition-[color,box-shadow] overflow-hidden border-transparent bg-primary text-primary-foreground" %}
-<div class="container mx-auto px-5">
-    <div class="m-4">
-        <h4 class="text-4xl underline">Skills</h4>
-        <div class="mb-4 space-x-1 space-y-2 ">
-            {% for skill in resume.skills %}
-                <span
-                    data-slot="badge"
-                    class="{{badge_style}}{% if skill.years < 2 %} text-md {% elif skill.years < 3 %} text-lg {%
-                        elif skill.years < 4 %} text-xl {% elif skill.years < 5 %} text-2xl {% elif skill.years < 6 %} text-3xl {% else %} text-4xl {% endif %}">
-                    {{ skill.name }}</span>
-            {% endfor %}
+<div class="m-4">
+    <h4 class="text-4xl underline">Skills</h4>
+    <div class="mb-4 space-x-1 space-y-2 ">
+        {% for skill in resume.skills %}
+            <span class="{{badge_style}}{% if skill.years < 2 %} text-md {% elif skill.years < 3 %} text-lg {%elif skill.years < 4 %} text-xl {% elif skill.years < 5 %} text-2xl {% elif skill.years < 6 %} text-3xl {% else %} text-4xl {% endif %}">{{ skill.name }}</span>
+        {% endfor %}
+    </div>
+</div>
+<div class="m-4">
+    <h4 class="text-4xl underline">Experience</h4>
+    {% for experience in resume.experience %}
+        <div
+            data-slot="card"
+            class="bg-card text-card-foreground gap-6 rounded-xl border py-6 shadow-sm flex flex-col my-4">
+            <div
+                data-slot="card-header"
+                class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 px-6
+                    has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6">
+                <div data-slot="card-title" class="leading-none font-semibold text-xl">{{ experience.position }} @ {{experience.name}}</div>
+                <div data-slot="card-description" class="text-muted-foreground text-md">{{ experience.timeEmployed }} in {{experience.location}}</div>
+            </div>
+            <div data-slot="card-content" class="px-6">
+                <ul class="list-disc px-6">
+                    {%for responsibility in experience.responsibilities%}
+                        <li>{{responsibility}}</li>
+                    {%endfor%}
+                </ul>
+            </div>
         </div>
-    </div>
-    <div class="m-4">
-        <h4 class="text-4xl underline">Experience</h4>
-        {% for experience in resume.experience %}
+    {% endfor %}
+</div>
+<div class="m-4">
+    <h4 class="text-4xl underline">Education</h4>
+    {% for education in resume.education %}
+        <div
+            data-slot="card"
+            class="bg-card text-card-foreground gap-6 rounded-xl border py-6 shadow-sm flex flex-col my-4">
             <div
-                data-slot="card"
-                class="bg-card text-card-foreground gap-6 rounded-xl border py-6 shadow-sm flex flex-col my-4">
-                <div
-                    data-slot="card-header"
-                    class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 px-6
-                        has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6">
-                    <div data-slot="card-title" class="leading-none font-semibold text-xl">{{ experience.position }} @ {{experience.name}}</div>
-                    <div data-slot="card-description" class="text-muted-foreground text-md">{{ experience.timeEmployed }} in {{experience.location}}</div>
-                </div>
-                <div data-slot="card-content" class="px-6">
-                    <ul class="list-disc px-6">
-                        {%for responsibility in experience.responsibilities%}
-                            <li>{{responsibility}}</li>
-                        {%endfor%}
-                    </ul>
-                </div>
+                data-slot="card-header"
+                class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 px-6
+                    has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6">
+                <div data-slot="card-title" class="leading-none font-semibold text-xl">{{ education.name }} </div>
+                <div data-slot="card-description" class="text-muted-foreground text-md">{{ education.degree }} - {{education.graduationDate}}</div>
             </div>
-        {% endfor %}
-    </div>
-    <div class="m-4">
-        <h4 class="text-4xl underline">Education</h4>
-        {% for education in resume.education %}
-            <div
-                data-slot="card"
-                class="bg-card text-card-foreground gap-6 rounded-xl border py-6 shadow-sm flex flex-col my-4">
-                <div
-                    data-slot="card-header"
-                    class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 px-6
-                        has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6">
-                    <div data-slot="card-title" class="leading-none font-semibold text-xl">{{ education.name }} </div>
-                    <div data-slot="card-description" class="text-muted-foreground text-md">{{ education.degree }} - {{education.graduationDate}}</div>
-                </div>
-                <div data-slot="card-content" class="px-6">
-                    <em>Notes: {{education.degreeAddendum}}</em>
-                    <p> Relevant Coursework:</p>
-                    <ul class="list-disc px-6">
-                        {%for course in education.relCoursework%}
-                            <li>{{course}}</li>
-                        {%endfor%}
-                    </ul>
-                </div>
+            <div data-slot="card-content" class="px-6">
+                <em>Notes: {{education.degreeAddendum}}</em>
+                <p> Relevant Coursework:</p>
+                <ul class="list-disc px-6">
+                    {%for course in education.relCoursework%}
+                        <li>{{course}}</li>
+                    {%endfor%}
+                </ul>
             </div>
-        {% endfor %}
-    </div>
+        </div>
+    {% endfor %}
 </div>
