--- a/src/index.njk
+++ b/src/index.njk
@@ -14,7 +14,7 @@ layout: layouts/base.njk
                                 alt="me :)"
                                 width="472"
                                 height="472"
-                                class="h-48 w-48 rounded-full border-8 transition-all hover:border-primary"
+                                class="h-48 w-48 rounded-full border-8 transition-all hover:border-primary mx-8"
                                 style="color:transparent"
                                 src="assets/pfp.webp"/>
                         </div>
@@ -47,8 +47,81 @@ layout: layouts/base.njk
                 </div>
             </section>
             <div data-orientation="horizontal" role="separator" class="my-4 w-[80%] border-2"></div>
-            <section class="flex flex-col items-center">
-                <h3 class="mx-4 mb-4 text-5xl">Featured Projects</h3>
-            </section>
+			<div class="flex flex-col xl:flex-row gap-4">
+				<section class="flex flex-col items-center grow">
+					<h1 class="mx-4 mb-4 text-5xl">Recent Blog Posts</h1>
+					{% for post in collections.recentPosts %}
+						<a href="/blog/{{ post.data.slug }}" class="flex grow">
+							<div data-slot="card" class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm mb-4 grow">
+								<div
+									data-slot="card-header"
+									class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 px-6
+										has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6">
+									<div data-slot="card-title" class="leading-none font-semibold">{{ post.data.postTitle }}</div>
+									<div data-slot="card-description" class="text-muted-foreground text-sm">
+										<time datetime="{{ post.data.date }}">{{ post.data.date | prettyDate }}</time>
+									</div>
+								</div>
+								<div data-slot="card-content" class="px-6">
+									<em>{{ post.data.excerpt }}</em>
+								</div>
+							</div>
+						</a>
+					{% endfor %}
+				</section>
+				<section class="flex flex-col items-center">
+					<h1 class="mx-4 mb-4 text-5xl">Featured Projects</h1>
+
+					{% set badge_style = "inline-flex items-center justify-center font-medium rounded-md border px-2 py-0.5 text-xs w-fit whitespace-nowrap shrink-0 gap-1 focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] transition-[color,box-shadow] overflow-hidden border-transparent bg-primary text-primary-foreground" %}
+					{% set button_style = "inline-flex items-center justify-center font-medium gap-2 whitespace-nowrap rounded-md text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3" %}
+					{% for project in featuredProjects %}
+						<div
+							data-slot="card"
+							class="bg-card text-card-foreground gap-6 rounded-xl border py-6 shadow-sm flex min-w-[325px] max-w-[450px] flex-col mb-4">
+							<div
+								data-slot="card-header"
+								class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 px-6
+									has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6">
+								<div data-slot="card-title" class="leading-none font-semibold">{{ project.projectName }}</div>
+								<div data-slot="card-description" class="text-muted-foreground text-sm">{{ project.projectDescription }}</div>
+							</div>
+							<div data-slot="card-content" class="px-6">
+								<div class="mb-4 space-x-1">
+									{% for projectTag in project.projectTags %}
+										<span class="{{ badge_style }}">{{ projectTag }}</span>
+									{% endfor %}
+								</div>
+							</div>
+							<div data-slot="card-footer" class="items-center px-6 [.border-t]:pt-6 flex gap-4">
+								{% for link in project.projectLinks %}
+									{% if link.linkType ==="github" %}
+
+										<button id="{{ link.linkType }}{{ project.projectId }}" class="{{ button_style }}" aria-label="GitHub Repository">
+											{% include 'icons/code_xml.njk' %}<span>Source Code</span>
+										</button>
+										<script>document.getElementById("{{ link.linkType }}{{ project.projectId }}").onclick = () => window.open("{{ link.linkURL }}")</script>
+
+									{% elif link.linkType==="demo" %}
+
+										<button id="{{ link.linkType }}{{ project.projectId }}" class="{{ button_style }}" aria-label="Online Demo">
+											{% include 'icons/app_window.njk' %}<span>Demo</span>
+										</button>
+										<script>document.getElementById("{{ link.linkType }}{{ project.projectId }}").onclick = () => window.open("{{ link.linkURL }}")</script>
+
+									{% elif link.linkType==="misc" %}
+
+										<button id="{{ link.linkType }}{{ project.projectId }}" class="{{ button_style }}" aria-label="{{ link.linkDesc }}">
+											{% include 'icons/link.njk' %}<span>{{ link.linkDesc }}</span>
+										</button>
+										<script>document.getElementById("{{ link.linkType }}{{ project.projectId }}").onclick = () => window.open("{{ link.linkURL }}")</script>
+
+									{% endif %}
+								{% endfor %}
+								<span class="w-full"></span>
+							</div>
+						</div>
+					{% endfor %}
+				</section>
+			</div>
         </div>
     </main>
