--- a/src/blog.njk
+++ b/src/blog.njk
@@ -10,32 +10,34 @@ layout: 'layouts/base.njk'
 <h1 class="mt-4 text-4xl"><code>ref_cycling - the blog</code></h1>
 <h2 class="mt-2 mb-4 text-2xl text-neutral-600 dark:text-neutral-400">AKA: Core Dumping my Brain on the Internet</h2>
 <p
-	class="prose prose-green dark:prose-invert inline-flex lg:flex"
-	xmlns:cc="http://creativecommons.org/ns#"
-	xmlns:dct="http://purl.org/dc/terms/">
-	<span property="dct:title" class="mr-1">The <code>ref_cycling</code> blog</span>
-	is licensed under
-	<a
-		href="https://creativecommons.org/licenses/by-nc-sa/4.0"
-		target="_blank"
-		rel="license noopener noreferrer"
-		class="ml-1 inline">CC BY-NC-SA 4.0</a>
+    class="prose prose-green dark:prose-invert inline-flex lg:flex"
+    xmlns:cc="http://creativecommons.org/ns#"
+    xmlns:dct="http://purl.org/dc/terms/">
+    <span property="dct:title" class="mr-1">The <code>ref_cycling</code> blog</span>
+    is licensed under
+    <a
+        href="https://creativecommons.org/licenses/by-nc-sa/4.0"
+        target="_blank"
+        rel="license noopener noreferrer"
+        class="ml-1 inline">
+        CC BY-NC-SA 4.0
+    </a>
 </p>
 {% for post in collections.blogSorted %}
-	<a href="/blog/{{ post.data.slug }}">
-		<div data-slot="card" class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm my-4">
-			<div
-				data-slot="card-header"
-				class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 px-6
-					has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6">
-				<div data-slot="card-title" class="leading-none font-semibold">{{ post.data.postTitle }}</div>
-				<div data-slot="card-description" class="text-muted-foreground text-sm">
-					<time datetime="{{ post.data.date }}">{{ post.data.date | prettyDate }}</time>
-				</div>
-			</div>
-			<div data-slot="card-content" class="px-6">
-				<em>{{ post.data.excerpt }}</em>
-			</div>
-		</div>
-	</a>
+    <a href="/blog/{{ post.data.slug }}">
+        <div data-slot="card" class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm my-4">
+            <div
+                data-slot="card-header"
+                class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 px-6
+                    has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6">
+                <div data-slot="card-title" class="leading-none font-semibold">{{ post.data.postTitle }}</div>
+                <div data-slot="card-description" class="text-muted-foreground text-sm">
+                    <time datetime="{{ post.data.date }}">{{ post.data.date | prettyDate }}</time>
+                </div>
+            </div>
+            <div data-slot="card-content" class="px-6">
+                <em>{{ post.data.excerpt }}</em>
+            </div>
+        </div>
+    </a>
 {% endfor %}
