--- a/src/projects.njk
+++ b/src/projects.njk
@@ -25,36 +25,43 @@ layout: 'layouts/base.njk'
                             <span class="{{ badge_style }}">{{ projectTag }}</span>
                         {% endfor %}
                     </div>
-                    <img alt="{{ project.projectName }}" loading="lazy" width="{{ project.assetWidth }}" height="{{ project.assetHeight }}" decoding="async" data-nimg="1" class="h-[250px] w-[400px] object-contain" src="assets/projects/{{ project.projectAsset }}" style="color: transparent;"></div>
-                    <div class="my-auto"></div>
-                    <div data-slot="card-footer" class="items-center px-6 [.border-t]:pt-6 flex gap-4">
-                        {% for link in project.projectLinks %}
-                            {% if link.linkType ==="github" %}
-
-                                <button id="{{ link.linkType }}{{ project.projectId }}" class="{{ button_style }}" aria-label="GitHub Repository">
-                                    {% include 'icons/code_xml.njk' %}<span>Source Code</span>
-                                </button>
-                                <script>document.getElementById("{{ link.linkType }}{{ project.projectId }}").onclick = () => window.open("{{ link.linkURL }}")</script>
-
-                            {% elif link.linkType==="demo" %}
-
-                                <button id="{{ link.linkType }}{{ project.projectId }}" class="{{ button_style }}" aria-label="Online Demo">
-                                    {% include 'icons/app_window.njk' %}<span>Demo</span>
-                                </button>
-                                <script>document.getElementById("{{ link.linkType }}{{ project.projectId }}").onclick = () => window.open("{{ link.linkURL }}")</script>
-
-		                    {% elif link.linkType==="misc" %}
-
-                                <button id="{{ link.linkType }}{{ project.projectId }}" class="{{ button_style }}" aria-label="{{ link.linkDesc }}">
-                                    {% include 'icons/link.njk' %}<span>{{ link.linkDesc }}</span>
-                                </button>
-                                <script>document.getElementById("{{ link.linkType }}{{ project.projectId }}").onclick = () => window.open("{{ link.linkURL }}")</script>
-
-                            {% endif %}
-                        {% endfor %}
-                        <span class="w-full"></span>
-                    </div>
+                    <img
+                        alt="{{ project.projectName }}"
+                        width="{{ project.assetWidth }}"
+                        height="{{ project.assetHeight }}"
+                        class="h-[250px] w-[400px] object-contain"
+                        src="assets/projects/{{ project.projectAsset }}"
+                        style="color: transparent;">
                 </div>
-            {% endfor %}
-        </div>
+                <div class="my-auto"></div>
+                <div data-slot="card-footer" class="items-center px-6 [.border-t]:pt-6 flex gap-4">
+                    {% for link in project.projectLinks %}
+                        {% if link.linkType ==="github" %}
+
+                            <button id="{{ link.linkType }}{{ project.projectId }}" class="{{ button_style }}" aria-label="GitHub Repository">
+                                {% include 'icons/code_xml.njk' %}<span>Source Code</span>
+                            </button>
+                            <script>document.getElementById("{{ link.linkType }}{{ project.projectId }}").onclick = () => window.open("{{ link.linkURL }}")</script>
+
+                        {% elif link.linkType==="demo" %}
+
+                            <button id="{{ link.linkType }}{{ project.projectId }}" class="{{ button_style }}" aria-label="Online Demo">
+                                {% include 'icons/app_window.njk' %}<span>Demo</span>
+                            </button>
+                            <script>document.getElementById("{{ link.linkType }}{{ project.projectId }}").onclick = () => window.open("{{ link.linkURL }}")</script>
+
+                        {% elif link.linkType==="misc" %}
+
+                            <button id="{{ link.linkType }}{{ project.projectId }}" class="{{ button_style }}" aria-label="{{ link.linkDesc }}">
+                                {% include 'icons/link.njk' %}<span>{{ link.linkDesc }}</span>
+                            </button>
+                            <script>document.getElementById("{{ link.linkType }}{{ project.projectId }}").onclick = () => window.open("{{ link.linkURL }}")</script>
+
+                        {% endif %}
+                    {% endfor %}
+                    <span class="w-full"></span>
+                </div>
+            </div>
+        {% endfor %}
     </div>
+</div>
