--- a/src/404.njk
+++ b/src/404.njk
@@ -6,11 +6,4 @@ permalink: 404.html
 <div class='flex flex-col text-center align-center'>
     <h1 class='m-8 text-4xl'>oops...</h1>
     <p>you seem to have navigated to a page that doesn&apos;t exist yet...</p>
-    <p>
-        you can&nbsp;
-        <a href='/' class='text-primary underline'>go back to the home page</p>
-    </p>
-</a>&nbsp;
-                or enjoy this funny meme i have:</p><div class='m-8 flex'>
-<div class='mx-auto'></div>
-<img src={imagesrc} alt='404 funny' width={400}/><div class='mx-auto'></div></div>
+</div>
