--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -21,14 +21,15 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="language" content="English">
         <meta name="author" content="Alex &quot;FaceFTW&quot; Westerman">
-        <meta name="generator" content="{{ eleventy.generator }}">
+        <meta name="generator" content="{{ eleventy.generator }}"1
         <!-- open graph -->
         <meta property="og:site_name" content="ref_cycling">
         <meta property="og:title" content="{{ t }}">
         <meta property="og:description" content="{{ d }}">
         <meta property="og:type" content="website">
         <meta property="og:url" content="{{ u }}">
-        <meta property="og:logo" content="{{ "/assets/img/icon-192.png" | htmlBaseUrl(settings.url) }}"> {# <meta property="og:image" content="{{ i }}"> #}
+        <meta property="og:logo" content="{{ "/assets/pfp.webp" | htmlBaseUrl("https://faceftw.dev") }}">
+		{# <meta property="og:image" content="{{ i }}"> #}
         {# <meta property="og:image:alt" content="{{ ia }}"> #}
         <meta property="og:locale" content="en_US">
     </head>
