--- a/src/about.njk
+++ b/src/about.njk
@@ -1,6 +1,7 @@
 ---
 title: About Alex
 layout: layouts/base.njk
+description: "A bit of life story and background on Alex Westerman"
 ---
 
 <h1 class='m-4 text-4xl'>Hi! My name is Alex</h1>
