--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,7 @@
 ---
 title: Home
 layout: layouts/base.njk
+description: "The website of Alex Westerman. Checkout the blog for very cool (rants) posts about software development or other interesting topics."
 ---
 <div class="flex flex-col items-center">
 	<section class="flex w-full flex-col">
