--- a/src/resume.njk
+++ b/src/resume.njk
@@ -1,6 +1,7 @@
 ---
 title: Alex Westerman's Resume
 layout: 'layouts/base.njk'
+description: "Online (and most updated version) of Alex Westerman's Resume. Look here if you want to offer me a Software Engineer position!"
 ---
 {% set badge_style = "inline-flex items-center justify-center font-medium rounded-md border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 gap-1 focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] transition-[color,box-shadow] overflow-hidden border-transparent bg-primary text-primary-foreground" %}
 <div class="m-4">
