--- a/src/blog.njk
+++ b/src/blog.njk
@@ -6,6 +6,7 @@ layout: 'layouts/base.njk'
 #	size: 5
 #	alias: post
 #permalink: "1"
+description: "AKA Core Dumping my brain on the Internet. A blog talking about various things in computers like Rust and software development. New posts SOON(TM)"
 ---
 <h1 class="mt-4 text-4xl"><code>ref_cycling - the blog</code></h1>
 <h2 class="mt-2 mb-4 text-2xl text-neutral-600 dark:text-neutral-400">AKA: Core Dumping my Brain on the Internet</h2>
