--- a/src/main.css
+++ b/src/main.css
@@ -1,23 +1,23 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 @import "tw-animate-css";
 @plugin "@tailwindcss/typography";
 
 @custom-variant dark (&:is(.dark *));
 
 @font-face {
-  font-family: 'Rubik';
+  font-family: "Rubik";
   font-style: normal;
   font-weight: 300 900;
   font-display: swap;
-  src: url("fonts/Rubik-VariableFont_wght.ttf") format('truetype');
+  src: url("fonts/Rubik-VariableFont_wght.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Rubik';
+  font-family: "Rubik";
   font-style: italic;
   font-weight: 300 900;
   font-display: swap;
-  src: url("fonts/Rubik-Italic-VariableFont_wght.ttf") format('truetype');
+  src: url("fonts/Rubik-Italic-VariableFont_wght.ttf") format("truetype");
 }
 
 :root {
@@ -120,12 +120,12 @@
       height: 0;
     }
     100% {
-    height: var(--radix-accordion-content-height)
+      height: var(--radix-accordion-content-height);
     }
   }
   @keyframes accordion-up {
     0% {
-      height: var(--radix-accordion-content-height)
+      height: var(--radix-accordion-content-height);
     }
     100% {
       height: 0;
@@ -134,24 +134,36 @@
 }
 
 @utility bg-gradient-one {
-  background-image: linear-gradient(to right, white 50%,transparent 50%), linear-gradient(to right,transparent 50%,#86efac 50%,#5eead4 75%);
+  background-image:
+    linear-gradient(to right, white 50%, transparent 50%),
+    linear-gradient(to right, transparent 50%, #86efac 50%, #5eead4 75%);
 }
 @utility bg-gradient-one-dark {
-  background-image: linear-gradient(to right, #0c0a09 50%,transparent 50%), linear-gradient(to right,transparent 50%,#15803d 50%,#0f766e 75%);
+  background-image:
+    linear-gradient(to right, #0c0a09 50%, transparent 50%),
+    linear-gradient(to right, transparent 50%, #15803d 50%, #0f766e 75%);
 }
 
 @utility bg-gradient-two {
-  background-image: linear-gradient(to right, white 50%,transparent 50%), linear-gradient(to right,transparent 50%,#ef4444 50%,#f97136 75%);
+  background-image:
+    linear-gradient(to right, white 50%, transparent 50%),
+    linear-gradient(to right, transparent 50%, #ef4444 50%, #f97136 75%);
 }
 @utility bg-gradient-two-dark {
-  background-image: linear-gradient(to right, #0c0a09 50%,transparent 50%), linear-gradient(to right,transparent 50%,#ef4444 50%,#f97136 75%);
+  background-image:
+    linear-gradient(to right, #0c0a09 50%, transparent 50%),
+    linear-gradient(to right, transparent 50%, #ef4444 50%, #f97136 75%);
 }
 
 @utility bg-gradient-three {
-  background-image: linear-gradient(to right, white 50%,transparent 50%), linear-gradient(to right,transparent 50%,#818cf8 50%,#06b6d4 75%);
+  background-image:
+    linear-gradient(to right, white 50%, transparent 50%),
+    linear-gradient(to right, transparent 50%, #818cf8 50%, #06b6d4 75%);
 }
 @utility bg-gradient-three-dark {
-  background-image: linear-gradient(to right, #0c0a09 50%,transparent 50%), linear-gradient(to right,transparent 50%,#818cf8 50%,#06b6d4 75%);
+  background-image:
+    linear-gradient(to right, #0c0a09 50%, transparent 50%),
+    linear-gradient(to right, transparent 50%, #818cf8 50%, #06b6d4 75%);
 }
 
 @keyframes gradient-trans {
@@ -213,6 +225,4 @@
     @apply text-muted-foreground;
     @apply mt-4;
   }
-
 }
-
