--- a/src/projects.njk
+++ b/src/projects.njk
@@ -1,6 +1,7 @@
 ---
 title: Alex's Projects
 layout: 'layouts/base.njk'
+description: "List of projects created by Alex Westerman. Some are open source! Click the link and check them out!"
 ---
 
 {% set badge_style = "inline-flex items-center justify-center font-medium rounded-md border px-2 py-0.5 text-xs w-fit whitespace-nowrap shrink-0 gap-1 focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] transition-[color,box-shadow] overflow-hidden border-transparent bg-primary text-primary-foreground" %}
