fix one last title

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -12,7 +12,7 @@
         <link rel="stylesheet" type="text/css" href="/assets/main.css"/> <script>{% include "layout_preinit.js" %}</script>
         <link rel="canonical" href="{{ u }}">
 
-        <meta name="title" content="Alex's Website">
+        <meta name="title" content="ref_cycling - the website of Alex Westerman">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="{{ d }}">
