--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -21,7 +21,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="language" content="English">
         <meta name="author" content="Alex &quot;FaceFTW&quot; Westerman">
-        <meta name="generator" content="{{ eleventy.generator }}"1
+        <meta name="generator" content="{{ eleventy.generator }}">
         <!-- open graph -->
         <meta property="og:site_name" content="ref_cycling">
         <meta property="og:title" content="{{ t }}">
