Fix projects link

--- a/src/index.njk
+++ b/src/index.njk
@@ -124,7 +124,7 @@ description: "The website of Alex Westerman. Checkout the blog for very cool (ra
 					</div>
 				</div>
 			{% endfor %}
-			<a href="/project" class="inline-flex text-primary items-center">
+			<a href="/projects/" class="inline-flex text-primary items-center">
 					{% include 'icons/code_xml.njk' %}<span class="pl-4 text-xl">More Projects</span>
 			</a>
 		</section>
